# kafka-benchmark

./: Cargo.toml
config/: base_producer.yaml  future_producer.yaml
src/: config.rs
src/producer/: content.rs  mod.rs
